usando funciones JS

--- a/index.html
+++ b/index.html
@@ -65,16 +65,18 @@
             </ul>
         </section>
      </footer>
+     <script src="./app.js"></script>
+
 </body>
 <script>
     //alert("Hola Compatriotas")
-    let mensaje;
-    let person = prompt("Por favor ingrese su nombre:", "");
-    if (person == null || person == "") {
-        mensaje = "Bienvenido, estas en modo invitado";
-    } else {
-        mensaje = "Bienvenido " + person;
-    }
-    document.getElementById("mensaje").innerHTML = mensaje;
+   // let mensaje;
+    //let person = prompt("Por favor ingrese su nombre:", "");
+    //if (person == null || person == "") {
+    //    mensaje = "Bienvenido, estas en modo invitado";
+    //} else {
+    //    mensaje = "Bienvenido " + person;
+    //}
+    //document.getElementById("mensaje").innerHTML = mensaje;
 </script>
 </html>
