usando stylos css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wari Tourt</title>
+    <link rel="stylesheet" href="./styles.css" />
 </head>
 <script>
     console.log ("Hola mundo")
@@ -14,8 +15,8 @@
 <body>
     <header>
         <nav>
-            <img src="mapa-ayacucho.avif" width="60" alt="">
-            <ul>
+            <img src="mapa-ayacucho.avif" width="60" alt=""/>
+            <ul class="header-list">
                 <li>
                     <a href="">Inicio</a>
                 </li>
@@ -32,7 +33,7 @@
     </header>
     <main>
         <h3 id="mensaje"></h3>
-        <img src="plaza_huamanga.jpg" alt="" width="800px" />
+        <img class="viaje" src="plaza_huamanga.jpg" alt="" width="800px" />
         <h1>
             Sitio Web para conocer los lugares Turísticos de la Región Ayacucho
         </h1>
